--- a/prpy/_config.yml
+++ b/prpy/_config.yml
@@ -62,3 +62,7 @@ sphinx:
     - sphinx_proof
 
 only_build_toc_files: true
+
+launch_buttons:
+  notebook_interface: "jupyterlab" 
+  colab_url: "https://colab.research.google.com"
