--- a/prpy/_config.yml
+++ b/prpy/_config.yml
@@ -27,7 +27,7 @@ bibtex_bibfiles:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/NITIC-J-Murakami-Lab/PRML-Textbooks  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
+  path_to_book: prpy  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
@@ -35,12 +35,13 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
-  use_edit_page_button: true
+  use_edit_page_button: false  # Whether to add an "edit this page" button to pages. If `true`, repository information in repository: must be filled in
   use_repository_button: true
+  use_multitoc_numbering    : true   # Continuous numbering across parts/chapters
 
 sphinx:
   config:
-    #html_theme: sphinx_rtd_theme
+    language: ja
     bibtex_reference_style: author_year
     #bibtex_bibfiles: "ref.bib"
     mathjax_config:
