英語表記に戻す

--- a/prpy/_config.yml
+++ b/prpy/_config.yml
@@ -41,7 +41,7 @@ html:
 
 sphinx:
   config:
-    language: ja
+    #language: ja
     bibtex_reference_style: author_year
     #bibtex_bibfiles: "ref.bib"
     mathjax_config:
