--- a/prpy/_config.yml
+++ b/prpy/_config.yml
@@ -13,7 +13,8 @@ logo                        : logo.png  # A path to the book logo
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks: force
+  execute_notebooks: cache
+  #execute_notebooks: force
 
 # Define the name of the latex output file for PDF builds
 latex:
