--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "torchvision>=0.18.0",
     "cufflinks>=0.17.3",
     "umap-learn>=0.5.6",
+    "ml-dtypes==0.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
